Some adjustments to the communication between stripe and client

--- a/StripeTastic/data/css/style.css
+++ b/StripeTastic/data/css/style.css
@@ -30,3 +30,14 @@ p {
 .button2 {
     background-color: #f44336;
 }
+
+#stripe_container>div{
+    margin-top: 20px;
+}
+
+.pixel{
+    height: 15px;
+    width: 15px;
+    /*margin: 1px;*/
+    float:left;
+}
