Added first settings page part

--- a/StripeTastic.Client/wwwroot/css/style.css
+++ b/StripeTastic.Client/wwwroot/css/style.css
@@ -58,6 +58,13 @@ p {
   font-size: 1.5rem;
 }
 /*************************************************************************
+ * Base System
+ *************************************************************************/
+#container-page {
+  padding: var(--margin-default);
+}
+
+/*************************************************************************
  * Alerts
  *************************************************************************/
 
